Fix product count align

--- a/client/public/scss/product-list.scss
+++ b/client/public/scss/product-list.scss
@@ -17,6 +17,7 @@
         border-bottom: 2px solid #e6d2a6;
         margin-bottom: 35px;
         margin-top: 35px;
+        margin-left: -15px;
         text-transform: uppercase; 
     }
 
